# fiux

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/tests/: csv_tests.rs  json_tests.rs  mod.rs  toml_tests.rs
src/utils/: cli.rs  log.rs  mod.rs  utilities.rs
src/utils/decoders/: csv_decoder.rs  json_decoder.rs  mod.rs  ndjson_decoder.rs  toml_decoder.rs
src/utils/readers/: csv_reader.rs  json_reader.rs  mod.rs  ndjson_reader.rs  toml_reader.rs
src/utils/validators/: csv_validator.rs  json_validator.rs  mod.rs  ndjson_validator.rs  toml_validator.rs
src/utils/writers/: csv_writer.rs  mod.rs  ndjson_writer.rs  toml_writer.rs  write_json.rs
tests/: integration_tests.rs
